setup user and authority classes, database config, and test containers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.devtools.livereload.enabled=false
 
 logging.level.org.springframework.security=trace
 logging.level.org.springframework.security.oauth2=trace
+
+# Postgres connection settings
+spring.datasource.url=jdbc:postgresql://localhost:5432/oauth2_authorization_server_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
