--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+spring.application.name=auth-server
+server.port=8080
 spring.devtools.restart.log-condition-evaluation-delta=false
 spring.devtools.livereload.enabled=false
 #logging.level.root=trace
-
+spring.threads.virtual.enabled=true
 logging.level.org.springframework.security=trace
 logging.level.org.springframework.security.oauth2=trace
 
@@ -11,6 +13,6 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
